--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,19 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
 html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+body,
+#__next {
+  @apply p-0 m-0 h-full w-full bg-gray-300 text-white font-inter overflow-hidden;
 }
 
 a {
   color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
